tests/fsharp/typecheck/sigs/neg133.bsl

neg133.fs(4,19,4,22): typecheck error FS3521: Invalid member declaration. The name of the member is missing or has parentheses.

neg133.fs(7,19,7,27): typecheck error FS3521: Invalid member declaration. The name of the member is missing or has parentheses.

neg133.fs(28,7,28,12): typecheck error FS0026: This rule will never be matched

neg133.fs(34,7,34,12): typecheck error FS0026: This rule will never be matched

neg133.fs(40,7,40,12): typecheck error FS0026: This rule will never be matched

neg133.fs(46,7,46,11): typecheck error FS0026: This rule will never be matched

neg133.fs(52,7,52,32): typecheck error FS0026: This rule will never be matched

neg133.fs(57,7,57,14): typecheck error FS0026: This rule will never be matched

neg133.fs(63,7,63,14): typecheck error FS0026: This rule will never be matched

neg133.fs(69,7,69,16): typecheck error FS0026: This rule will never be matched

neg133.fs(76,10,76,11): typecheck error FS0957: One or more of the declared type parameters for this type extension have a missing or wrong type constraint not matching the original type constraints on 'A<_,_,_>'
